<project>
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.siriushq.stellar</groupId>
        <artifactId>stellar</artifactId>
        <version>1.0-RC1</version>
        <relativePath>../pom.xml</relativePath>
    </parent>

    <packaging>jar</packaging>
    <artifactId>stellar-configuration</artifactId>
    <name>Stellar :: Configuration</name>

	<properties>
		<java.version.main>11</java.version.main>
	</properties>

    <dependencies>
		<dependency>
			<groupId>io.avaje</groupId>
			<artifactId>avaje-spi-service</artifactId>

			<optional>true</optional>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.siriushq.stellar</groupId>
			<artifactId>stellar-configuration-mutator</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.siriushq.stellar</groupId>
			<artifactId>stellar-lifecycle-testing</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

    <build>
        <plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>

				<configuration>
					<archive>
						<manifestEntries>
							<Multi-Release>true</Multi-Release>
						</manifestEntries>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>

				<executions>
					<execution>
						<id>compile-java16</id>

						<phase>compile</phase>
						<goals>
							<goal>compile</goal>
						</goals>

						<configuration>
							<release>16</release>
							<multiReleaseOutput>true</multiReleaseOutput>

							<compileSourceRoots>
								<root>${project.basedir}/src/main/java16</root>
							</compileSourceRoots>
						</configuration>
					</execution>
					<execution>
						<id>compile-java23</id>

						<phase>compile</phase>
						<goals>
							<goal>compile</goal>
						</goals>

						<configuration>
							<release>23</release>
							<multiReleaseOutput>true</multiReleaseOutput>

							<compileSourceRoots>
								<root>${project.basedir}/src/main/java23</root>
							</compileSourceRoots>
						</configuration>
					</execution>
				</executions>
			</plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
            </plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>

				<configuration>
					<argLine>
					--add-opens sirius.stellar.configuration/sirius.stellar.configuration=ALL-UNNAMED
					--add-opens java.base/java.util=sirius.stellar.configuration.mutator
					</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-gpg-plugin</artifactId>
			</plugin>
        </plugins>
    </build>
</project>